jquery animations added

--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -225,7 +225,7 @@
             <img src="/img/sally-circle.png" alt="">
           </div>
           <div class="speech-bubble">
-            <p class=""> I also found some documents in your CRM that might be helpful for your next step. </p>
+            <p class=""> Do you need some help executing the moves above? Check out these documents. </p>
           </div>
         </div>
 
@@ -246,7 +246,7 @@
                   <img class="file-icon" src="/img/excel.svg" alt="">
                 </div>
                 <div class="to-do-description">
-                  <a class="file-name"> Busisness-Case-Template.xls </a>
+                  <a class="file-name"> Business-Case-Template.xls </a>
                   <a href="/files/Busisness-Case-Template.pdf" target="_blank" download>
                     <img src="/img/download-interface-symbol-of-down-arrow-on-a-tray.svg" class="icon-download" alt="">
                   </a>
@@ -263,7 +263,7 @@
                   <img class="file-icon" src="/img/powerpoint.svg" alt="">
                 </div>
                 <div class="to-do-description">
-                  <a class="file-name"> Busisness-Case-Pitch-Deck.ppt </a>
+                  <a class="file-name"> Business-Case-Pitch-Deck.ppt </a>
                   <a href="/files/Questions.pdf" target="_blank" download>
                     <img src="/img/download-interface-symbol-of-down-arrow-on-a-tray.svg" class="icon-download" alt="">
                   </a>
@@ -297,7 +297,7 @@
               <button class="find-colleagues long-button" type="button" name="button"> Go to next section </button>
             </div>
           </div>
-          <div id="content-task-detail-2" class="white-box collapsible">
+          <div id="content-task-detail-2" class="white-box content-block_invisible collapsible">
             <p class="amount-cases"> We found these resources which might support you. </p>
             <!-- HELPFUL RESOURCES Option 2-->
             <div id="task-detail-block-2" class="">
@@ -334,7 +334,7 @@
             <img src="/img/sally-circle.png" alt="">
           </div>
           <div class="speech-bubble">
-            <p class=""> Still have any questions? Sometimes asking an experienced colleague is also very valuable. </p>
+            <p class=""> Make use of your colleagues knowledge in case the documents cannot help you! </p>
           </div>
         </div>
 
@@ -360,7 +360,7 @@
                     <p id="call-action" class="colleague-contact-details"> +41 147 7846455 </p>
                   </span>
                   <span> <i class="fas fa-envelope"></i>
-                    <p id="mail-action" class="colleague-contact-details"> jordan.belfort@wolf.com </p>
+                    <p id="mail-action" class="colleague-contact-details"> jordan.belfort@global-tech.com </p>
                   </span>
                 </div>
                 <div class="to-do-metric">
@@ -380,7 +380,7 @@
                     <p class="colleague-contact-details"> +1 170 8351937 </p>
                   </span>
                   <span> <i class="fas fa-envelope"></i>
-                    <p class="colleague-contact-details"> donnie.azoff@wolf.com </p>
+                    <p class="colleague-contact-details"> donnie.azoff@global-tech.com </p>
                   </span>
                 </div>
                 <div class="to-do-metric">
@@ -400,7 +400,7 @@
                     <p class="colleague-contact-details"> +1 159 0917902 </p>
                   </span>
                   <span> <i class="fas fa-envelope"></i>
-                    <p class="colleague-contact-details"> mark.hanna@wolf.com </p>
+                    <p class="colleague-contact-details"> mark.hanna@global-tech.com </p>
                   </span>
                 </div>
                 <div class="to-do-metric">
@@ -423,7 +423,7 @@
             <img src="/img/sally-circle.png" alt="">
           </div>
           <div class="speech-bubble">
-            <p class=""> Want to add your next move to your to-do list? I'll help you to directly add it to Salesforce. </p>
+            <p class=""> Don't forget to add your task to Salesforce. The more you enter, the better I can analyze. </p>
           </div>
         </div>
 
