--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -31,7 +31,7 @@
         </div>
         <!-- claim of sally sales -->
         <span id="slogan-span">
-          <p>Leverage your sales team's collective cleverness.</p>
+          <p> "Hi I'm Sally, your intelligent sales companion."</p>
         </span>
       </div>
 
@@ -76,7 +76,7 @@
 
         <!-- buttons  -->
         <div class="button-panel">
-          <button id="proceed-analysis-button" type="button" name="button"> Get insights </button>
+          <button id="proceed-analysis-button" type="button" name="button"> Get advice </button>
         </div>
       </div>
 
@@ -91,12 +91,12 @@
       </div>
       <!-- claim of sally sales -->
       <span id="slogan-span">
-        <p>Leverage your sales team's collective cleverness.</p>
+        <p>"Let me crunch some numbers for you."</p>
       </span>
       <div class="load-animation-wrapper">
         <img id="load-animation" src="/img/load-square.gif" alt="">
       </div>
-      <h4 class="white-font"> Analyzing your database</h4>
+      <h4 class="white-font"> Processing ...</h4>
     </div>
 
 
@@ -123,7 +123,7 @@
             <img src="/img/sally-circle.png" alt="">
           </div>
           <div class="speech-bubble">
-            <p class=""> Congratulation! I found 65 comparable closed deals out of 4768 in your organization! </p>
+            <p class="">"Congrats! I found 65 comparable deals." </p>
           </div>
 
         </div>
@@ -177,7 +177,7 @@
             <img src="/img/sally-circle.png" alt="">
           </div>
           <div class="speech-bubble">
-            <p class=""> Do you need some help executing the moves above? Check out these documents. </p>
+            <p class=""> "I gathered relevant documents for you" </p>
           </div>
         </div>
 
@@ -270,7 +270,7 @@
             <img src="/img/sally-circle.png" alt="">
           </div>
           <div class="speech-bubble">
-            <p class=""> Make use of your colleagues knowledge in case the documents cannot help you! </p>
+            <p class=""> "Make use of our colleagues' experience" </p>
           </div>
         </div>
 
@@ -339,7 +339,7 @@
             <img src="/img/sally-circle.png" alt="">
           </div>
           <div class="speech-bubble">
-            <p class=""> Don't forget to add your task to Salesforce. The more you enter, the better I can analyze. </p>
+            <p class=""> "Always add your task to Salesforce" </p>
           </div>
         </div>
 
