animation fixes. hopefully final version.

--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -31,14 +31,14 @@
         </div>
         <!-- claim of sally sales -->
         <span id="slogan-span">
-          <p> "Hi I'm Sally, your intelligent sales companion."</p>
+          <p id="pclaim"> "Hi I'm Sally, your intelligent sales companion."</p>
         </span>
       </div>
 
       <div id="case-description-wrapper">
         <!--- Meta Description of current analyzed lead / opportunity --->
         <div class="box-wrapper ">
-          <div class="icon-headline-block-2 white-box">
+          <div class="icon-headline-block-2 white-box-headline">
             <img src="/img/file.svg" class="icon-headline" alt="">
             <h6> Your selected case </h6>
           </div>
@@ -91,7 +91,7 @@
       </div>
       <!-- claim of sally sales -->
       <span id="slogan-span">
-        <p>"Let me crunch some numbers for you."</p>
+        <p id="load-claim" >"Let me crunch some numbers for you."</p>
       </span>
       <div class="load-animation-wrapper">
         <img id="load-animation" src="/img/load-square.gif" alt="">
@@ -117,26 +117,25 @@
         </div>
         --->
 
-        <!---SALLY SALES COMPANION 1 --->
-        <div id="sally1" class="sally-assistant-wrapper">
-          <div class="sally-image">
-            <img src="/img/sally-circle.png" alt="">
-          </div>
-          <div class="speech-bubble">
-            <p class="">"Congrats! I found 65 comparable deals." </p>
-          </div>
 
-        </div>
 
         <!---NEXT STEPS BOX--->
         <div id="content-block-process" class="content-block box-wrapper">
-          <div class="icon-headline-block white-box">
+          <div class="icon-headline-block white-box-headline">
             <img src="/img/one.svg" class="icon-headline" alt="">
             <h6> Pick your winning move </h6>
           </div>
           <!-- SUGGESTED NEXT STEPS -->
           <div id="next-steps-to-do-block" class="white-box collapsible">
-            <p class="amount-cases"> Choose one of the following moves to increase your chances to win.  </p>
+            <!---SALLY SALES COMPANION 1 --->
+            <div id="sally1" class="sally-assistant-wrapper">
+              <div class="sally-image">
+                <img src="/img/sally-circle.png" alt="">
+              </div>
+              <div class="speech-bubble">
+                <p class="">"Congratulations! I found 65 comparable deals for you." </p>
+              </div>
+            </div>
             <!-- FIRST NEXT STEP -->
             <div id="next-step-1" class="to-do-box">
               <div class="checkbox-wrapper">
@@ -171,26 +170,24 @@
           </div>
         </div>
 
-        <!-- Sally Sales Companion 2 -->
-        <div id="sally2" class="sally-assistant-wrapper content-block_invisible">
-          <div class="sally-image">
-            <img src="/img/sally-circle.png" alt="">
-          </div>
-          <div class="speech-bubble">
-            <p class=""> "I gathered relevant documents for you" </p>
-          </div>
-        </div>
-
         <!---TASK DETAIL BOX 1 --->
         <div class="content-block box-wrapper">
-          <div class="icon-headline-block white-box ">
+          <div class="icon-headline-block white-box-headline ">
             <img src="/img/two.svg" class="icon-headline" alt="">
             <h6> Find the right documents </h6>
             <!--<img src="/img/tap.svg" class="icon-headline" alt="">-->
           </div>
           <!-- HELPFUL RESOURCES Option 1-->
           <div id="content-task-detail-1" class="white-box content-block_invisible collapsible">
-            <p class="amount-cases"> We found these resources which might support you.</p>
+            <!-- Sally Sales Companion 2 -->
+            <div id="sally2" class="sally-assistant-wrapper">
+              <div class="sally-image">
+                <img src="/img/sally-circle.png" alt="">
+              </div>
+              <div class="speech-bubble">
+                <p class=""> "I gathered relevant documents for the move you just chose." </p>
+              </div>
+            </div>
             <div id="task-detail-block-1" class="">
               <!-- FIRST FILE -->
               <div class="to-do-box">
@@ -264,25 +261,24 @@
           </div>
         </div>
 
-        <!-- Sally Sales Companion 3 -->
-        <div id="sally3" class="sally-assistant-wrapper content-block_invisible">
-          <div class="sally-image">
-            <img src="/img/sally-circle.png" alt="">
-          </div>
-          <div class="speech-bubble">
-            <p class=""> "Make use of our colleagues' experience" </p>
-          </div>
-        </div>
 
         <!-- FIND A COLLEAGUE add content-block_invisible to add-->
         <div  class="content-block box-wrapper ">
-          <div class="icon-headline-block white-box">
+          <div class="icon-headline-block white-box-headline">
             <img src="/img/three.svg" class="icon-headline" alt="">
             <h6> Ask the best experts </h6>
             <!--<img src="/img/employee.svg" class="icon-headline" alt="">-->
           </div>
           <div id="content-block-colleague" class="white-box content-block_invisible collapsible">
-            <p class="amount-cases"> Based on their experience,  those colleagues might be able to help you. </p>
+            <!-- Sally Sales Companion 3 -->
+            <div id="sally3" class="sally-assistant-wrapper">
+              <div class="sally-image">
+                <img src="/img/sally-circle.png" alt="">
+              </div>
+              <div class="speech-bubble">
+                <p class=""> "Make use of your colleagues' experience and ask for support." </p>
+              </div>
+            </div>
             <!-- CONTACT LIST OF COLLEAGUES -->
             <div class="contact-list">
               <!-- CONTACT 1 -->
@@ -333,23 +329,23 @@
           </div>
         </div>
 
-        <!-- Sally Sales Companion 4 -->
-        <div id="sally4" class="sally-assistant-wrapper content-block_invisible">
-          <div class="sally-image">
-            <img src="/img/sally-circle.png" alt="">
-          </div>
-          <div class="speech-bubble">
-            <p class=""> "Always add your task to Salesforce" </p>
-          </div>
-        </div>
 
         <!-- ADD TASK TO SF BOX -->
         <div  class="content-block box-wrapper">
-          <div class="icon-headline-block white-box">
+          <div class="icon-headline-block white-box-headline">
             <img src="/img/four.svg" class="icon-headline" alt="">
             <h6> Add move to Salesforce</h6>
           </div>
           <div id="add-task-form-box" class="white-box content-block_invisible collapsible">
+            <!-- Sally Sales Companion 4 -->
+            <div id="sally4" class="sally-assistant-wrapper">
+              <div class="sally-image">
+                <img src="/img/sally-circle.png" alt="">
+              </div>
+              <div class="speech-bubble">
+                <p class=""> "Don't forget to add your task to Salesforce." </p>
+              </div>
+            </div>
             <form  class="task-form" action="" method="">
               <table>
                 <tr>
