--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -185,7 +185,7 @@
                 <img src="/img/sally-circle.png" alt="">
               </div>
               <div class="speech-bubble">
-                <p class=""> "I gathered relevant documents for the move you just chose." </p>
+                <p class=""> "I gathered relevant documents <br> for the move you just chose." </p>
               </div>
             </div>
             <div id="task-detail-block-1" class="">
